care/force-app/main/default/objects/Account_Plan_Contact_Role__c/Account_Plan_Contact_Role__c.object-meta.xml
<CustomObject>
    <description>To maintain many many relationship between Account Plan and Contact</description>
    <label>Account Plan Contact Role</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{000000}</displayFormat>
        <label>Account Plan Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>