care/force-app/main/default/objects/Account_Plan_Contact_Role__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economic Buyers</fullName>
            </value>
            <value>
                <fullName>Technical Buyers</fullName>
            </value>
            <value>
                <fullName>User Buyers</fullName>
            </value>
            <value>
                <fullName>Coaches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>