care/force-app/main/default/objects/Account_Plan_Contact_Role__c/recordTypes/WPS_Account_Plan_Contact_Role.recordType-meta.xml
<RecordType>
    <fullName>WPS_Account_Plan_Contact_Role</fullName>
    <active>true</active>
    <description>This is used by  WPS team</description>
    <label>WPS Account Plan Contact Role</label>
</RecordType>